syntax = "proto3";

package ProtoService;

service AccommodationGrpc {
	rpc GetAccommodationInfo(AccommodationRequest) returns (AccommodationResponse);
}

message AccommodationRequest {
	string Id = 1;
}

message AccommodationResponse {
	string name = 1;
	string location = 2;
	repeated string facilities = 3;
	string photos = 4;
	int32 minCapacity = 5;
	int32 maxCapacity = 6;
	string startDate = 7;
	string endDate = 8;
	double price = 9;
	bool reservation = 10;
	double grade = 11;
}

